--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-`</head>
+</head>
 <body>
-
+    <a href="#main" id="jump">Jump to main content</a>
+    <header>
+        <div class="container-xl">
+            <div class="row justify-content-between">
+                <div class="col-auto">
+                    <nav class="left-nav">
+                        <ul>
+                            <li><a href="#">Coffee</a></li>
+                            <li><a href="#">Tea</a></li>
+                            <li><a href="#">Baked Goods</a></li>
+                            <li><a href="#">Menus</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-auto">
+                    <a href="#" id="logo"></a>
+                </div>
+                <div class="col-auto">
+                    <nav class="right-nav">
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Locations</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
