Implemented first hero image and colored bar above it

--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="bar"></div>
+
+        <div class="hero-1">
+            <span class="image-descr"></span>
+        </div>
+
+        
+    </main>
 </body>
 </html>
