--- a/index.html
+++ b/index.html
@@ -49,7 +49,28 @@
             <span class="image-descr"></span>
         </div>
 
-        
+        <section class="container-xl views">
+            <div class="row justify-content-between">
+                <div class="col-md-4">
+                    <div class="content">
+                        <h1>We love tea too!</h1>
+                        <p>Just because coffee is in our name doesn't mean that we don't love infusions and a hot cup of tea</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content">
+                        <h1>Gift Packages</h1>
+                        <p>Our hand selected and carefully packaged gift sets are the perfect gift for the coffee or tea lover in your life.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="content">
+                        <h1>Giving Back</h1>
+                        <p>At Caturra Coffee, we are honored to give back to communities that we are a part of. Together we stand.</p>
+                    </div>
+                </div>
+            </div>
+        </section>>
     </main>
 </body>
 </html>
