Fully implemented and styled #hero-2

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <div class="bar"></div>
 
-        <div class="hero-1">
+        <div id="hero-1">
             <span class="image-descr"></span>
         </div>
 
@@ -74,6 +74,11 @@
                 </div>
             </div>
         </section>>
+
+        <div id="hero-2">
+            <span class="image-descr"></span>
+        </div>
+
     </main>
 </body>
 </html>
