Implemented and styled .menu

--- a/index.html
+++ b/index.html
@@ -79,6 +79,54 @@
             <span class="image-descr"></span>
         </div>
 
+        <section class="menu">
+            <div class="line"></div>
+            <div class="container-xl">
+                <div class="row justify-content-between">
+                    <div class="col-12">
+                        <h1>new menu items</h1>
+                    </div>
+                    <div class="col-5 menu-items">
+                        <h2>drinks</h2>
+                        <div class="row justify-content-between">
+                            <div class="col-auto drink-items">
+                                <ul>
+                                    <li>Cappucino California</li>
+                                    <li>Cafe Amiga</li>
+                                    <li>Machengo Tea</li>
+                                </ul>
+                            </div>
+                            <div class="col-auto drink-prices">
+                                <ul>
+                                    <li>$6.00</li>
+                                    <li>$4.50</li>
+                                    <li>$5.50</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5 menu-items">
+                        <h2>baked goods</h2>
+                        <div class="row justify-content-between">
+                            <div class="col-auto baked-goods-items">
+                                <ul>
+                                    <li>Macaron</li>
+                                    <li>Gluten-Free Bagel</li>
+                                    <li>Portlandia Donut</li>
+                                </ul>
+                            </div>
+                            <div class="col-auto baked-goods-prices">
+                                <ul>
+                                    <li>$3.00</li>
+                                    <li>$3.75</li>
+                                    <li>$7.00</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
