Implemented and styled #chemex. Started implementing and styling footer

--- a/index.html
+++ b/index.html
@@ -127,6 +127,34 @@
                 </div>
             </div>
         </section>
+
+        <a href="#" id="chemex"></a>
     </main>
+
+    <footer>
+        <div class="container-xl">
+            <div class="row justify-content-between">
+                <div class="col-3">
+                    <p>438 Aster Avenue<br />Parktown, NH 03602</p>
+                    <p class="hours">M-F 6 am - 9 pm<br />S-S 8 am - 8 pm</p>
+                </div>
+                <div class="col-3">
+                    <p>1426 Lakeside Road<br />Anderson, NH 03602</p>
+                    <p class="hours">M-F 6 am - 8 pm<br />S-S 9 am - 8 pm</p>
+                </div>
+                <div class="col-3">
+                    <p>100 Main Street<br />Anderson, NH 03602</p>
+                    <p class="hours">M-F 7 am - 9 pm<br />S-S 8 am - 9 pm</p>
+                </div>
+                <div class="col-3">
+                    <a href="www.instagram.com" class="icon" id="instagram-icon"></a>
+                    <a href="www.twitter.com" class="icon" id="twitter-icon"></a>
+                    <a href="www.facebook.com" class="icon" id="facebook-icon"></a>
+                    <div class="clear"></div>
+                    <p role="contentinfo">All content &copy; Caturra Coffee</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
