--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
     <footer>
         <div class="container-xl">
             <div class="row justify-content-between">
-                <div class="col-3">
+                <div class="col-sm-6 col-lg-3">
                     <p>438 Aster Avenue<br />Parktown, NH 03602</p>
                     <p class="hours">M-F 6 am - 9 pm<br />S-S 8 am - 8 pm</p>
                 </div>
-                <div class="col-3">
+                <div class="col-sm-6 col-lg-3">
                     <p>1426 Lakeside Road<br />Anderson, NH 03602</p>
                     <p class="hours">M-F 6 am - 8 pm<br />S-S 9 am - 8 pm</p>
                 </div>
-                <div class="col-3">
+                <div class="col-sm-6 col-lg-3">
                     <p>100 Main Street<br />Anderson, NH 03602</p>
                     <p class="hours">M-F 7 am - 9 pm<br />S-S 8 am - 9 pm</p>
                 </div>
-                <div class="col-3">
+                <div class="col-sm-6 col-lg-3">
                     <a href="www.instagram.com" class="icon" id="instagram-icon"></a>
                     <a href="www.twitter.com" class="icon" id="twitter-icon"></a>
                     <a href="www.facebook.com" class="icon" id="facebook-icon"></a>
