Changed md breakpoint to 783px due to early header nav shifting. Fully styled it to match 768px screenshot

--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-auto">
+                <div class="col-12 col-md-auto">
                     <a href="#" id="logo"></a>
+                    <form action="#" method="post">
+                        <select name="menu" id="menu">
+                            <option value="">Select a Page</option>
+                            <option value="coffee">Coffee</option>
+                            <option value="tea">Tea</option>
+                            <option value="baked-goods">Baked Goods</option>
+                            <option value="menus">Menus</option>
+                        </select>
+                    </form>
                 </div>
                 <div class="col-auto">
                     <nav class="right-nav">
@@ -86,7 +95,7 @@
                     <div class="col-12">
                         <h1>new menu items</h1>
                     </div>
-                    <div class="col-5 menu-items">
+                    <div class="col-md-5 menu-items">
                         <h2>drinks</h2>
                         <div class="row justify-content-between">
                             <div class="col-auto drink-items">
@@ -105,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-5 menu-items">
+                    <div class="col-md-5 menu-items">
                         <h2>baked goods</h2>
                         <div class="row justify-content-between">
                             <div class="col-auto baked-goods-items">
