--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <p class="hours">M-F 7 am - 9 pm<br />S-S 8 am - 9 pm</p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
-                    <a href="www.instagram.com" class="icon" id="instagram-icon"></a>
-                    <a href="www.twitter.com" class="icon" id="twitter-icon"></a>
-                    <a href="www.facebook.com" class="icon" id="facebook-icon"></a>
+                    <a href="https://www.instagram.com" class="icon" id="instagram-icon"></a>
+                    <a href="https://www.twitter.com" class="icon" id="twitter-icon"></a>
+                    <a href="https://www.facebook.com" class="icon" id="facebook-icon"></a>
                     <div class="clear"></div>
                     <p role="contentinfo">All content &copy; Caturra Coffee</p>
                 </div>
