Added resize styling to #chemex at 768px breakpoint

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
             </div>
         </section>
 
-        <a href="#" id="chemex"></a>
+        <div class="chemex-container">
+            <a href="#" id="chemex"></a>
+        </div>
     </main>
 
     <footer>
