Started implementing print styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </nav>
                 </div>
                 <div class="col-12 col-md-auto">
-                    <a href="#" id="logo"></a>
+                    <a href="#"><img id="logo" src="images/caturra-coffee-logo.webp" /></a>
                     <form action="#" method="post">
                         <select name="menu" id="menu">
                             <option value="">Select a Page</option>
@@ -64,25 +64,25 @@
                     <div class="content">
                         <h1>We love tea too!</h1>
                         <p>Just because coffee is in our name doesn't mean that we don't love infusions and a hot cup of tea.</p>
-                        <a href="#">view our selection</a>
+                        <a href="#">View our selection</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="content">
                         <h1>Gift Packages</h1>
                         <p>Our hand selected and carefully packaged gift sets are the perfect gift for the coffee or tea lover in your life.</p>
-                        <a href="#">view our gift boxes</a>
+                        <a href="#">View our gift boxes</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="content">
                         <h1>Giving Back</h1>
                         <p>At Caturra Coffee, we are honored to give back to communities that we are a part of. Together we stand.</p>
-                        <a href="#">view our projects</a>
+                        <a href="#">View our projects</a>
                     </div>
                 </div>
             </div>
-        </section>>
+        </section>
 
         <div id="hero-2">
             <span class="image-descr"></span>
@@ -93,10 +93,10 @@
             <div class="container-xl">
                 <div class="row justify-content-between">
                     <div class="col-12">
-                        <h1>new menu items</h1>
+                        <h1>New Menu Items</h1>
                     </div>
                     <div class="col-md-5 menu-items">
-                        <h2>drinks</h2>
+                        <h2>Drinks</h2>
                         <div class="row justify-content-between">
                             <div class="col-auto drink-items">
                                 <ul>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col-md-5 menu-items">
-                        <h2>baked goods</h2>
+                        <h2>Baked Goods</h2>
                         <div class="row justify-content-between">
                             <div class="col-auto baked-goods-items">
                                 <ul>
