Implemented microdata for the 3 postal addresses in footer

--- a/index.html
+++ b/index.html
@@ -146,15 +146,30 @@
         <div class="container-xl">
             <div class="row justify-content-between">
                 <div class="col-sm-6 col-lg-3">
-                    <p>438 Aster Avenue<br />Parktown, NH 03602</p>
+                    <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                        <span itemprop="streetAddress">438 Aster Avenue</span><br />
+                        <span itemprop="addressLocality">Parktown</span>, 
+                        <span itemprop="addressRegion">NH</span> 
+                        <span itemprop="postalCode">03602</span>
+                    </p>
                     <p class="hours">M-F 6 am - 9 pm<br />S-S 8 am - 8 pm</p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
-                    <p>1426 Lakeside Road<br />Anderson, NH 03602</p>
+                    <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                        <span itemprop="streetAddress">1426 Lakeside Road</span><br />
+                        <span itemprop="addressLocality">Anderson</span>, 
+                        <span itemprop="addressRegion">NH</span> 
+                        <span itemprop="postalCode">03602</span>
+                    </p>
                     <p class="hours">M-F 6 am - 8 pm<br />S-S 9 am - 8 pm</p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
-                    <p>100 Main Street<br />Anderson, NH 03602</p>
+                    <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                        <span itemprop="streetAddress">100 Main Street</span><br />
+                        <span itemprop="addressLocality">Anderson</span>, 
+                        <span itemprop="addressRegion">NH</span> 
+                        <span itemprop="postalCode">03602</span>
+                    </p>
                     <p class="hours">M-F 7 am - 9 pm<br />S-S 8 am - 9 pm</p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
