Added abbr tags to abbreviations in footer

--- a/index.html
+++ b/index.html
@@ -149,28 +149,37 @@
                     <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                         <span itemprop="streetAddress">438 Aster Avenue</span><br />
                         <span itemprop="addressLocality">Parktown</span>, 
-                        <span itemprop="addressRegion">NH</span> 
+                        <span itemprop="addressRegion"><abbr title="New Hampshire">NH</abbr></span> 
                         <span itemprop="postalCode">03602</span>
                     </p>
-                    <p class="hours">M-F 6 am - 9 pm<br />S-S 8 am - 8 pm</p>
+                    <p class="hours">
+                        <abbr title="Monday through Friday">M-F</abbr> 6 am - 9 pm<br />
+                        <abbr title="Saturday through Sunday">S-S</abbr> 8 am - 8 pm
+                    </p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                         <span itemprop="streetAddress">1426 Lakeside Road</span><br />
                         <span itemprop="addressLocality">Anderson</span>, 
-                        <span itemprop="addressRegion">NH</span> 
+                        <span itemprop="addressRegion"><abbr title="New Hampshire">NH</abbr></span> 
                         <span itemprop="postalCode">03602</span>
                     </p>
-                    <p class="hours">M-F 6 am - 8 pm<br />S-S 9 am - 8 pm</p>
+                    <p class="hours">
+                        <abbr title="Monday through Friday">M-F</abbr> 6 am - 8 pm<br />
+                        <abbr title="Saturday through Sunday">S-S</abbr> 9 am - 8 pm
+                    </p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                         <span itemprop="streetAddress">100 Main Street</span><br />
                         <span itemprop="addressLocality">Anderson</span>, 
-                        <span itemprop="addressRegion">NH</span> 
+                        <span itemprop="addressRegion"><abbr title="New Hampshire">NH</abbr></span> 
                         <span itemprop="postalCode">03602</span>
                     </p>
-                    <p class="hours">M-F 7 am - 9 pm<br />S-S 8 am - 9 pm</p>
+                    <p class="hours">
+                        <abbr title="Monday through Friday">M-F</abbr> 7 am - 9 pm<br />
+                        <abbr title="Saturday through Sunday">S-S</abbr> 8 am - 9 pm
+                    </p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
                     <a href="https://www.instagram.com" class="icon" id="instagram-icon"></a>
