Changed chemex so it uses img tag rather than background-image to allow for scalability at smaller sizes

--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
             </div>
         </section>
 
-        <div class="chemex-container">
-            <a href="#" id="chemex"></a>
-        </div>
+        <a href="#" id="chemex"><img src="images/chemex-top-rated-brewing-method.webp"/></a>
     </main>
 
     <footer>
@@ -186,7 +184,7 @@
                     <a href="https://www.twitter.com" class="icon" id="twitter-icon"></a>
                     <a href="https://www.facebook.com" class="icon" id="facebook-icon"></a>
                     <div class="clear"></div>
-                    <p role="contentinfo">All content &copy; Caturra Coffee</p>
+                    <p role="contentinfo" role>All content &copy; Caturra Coffee</p>
                 </div>
             </div>
         </div>
