--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Bootstrap demo</title>
+    <title>Caturra Coffee :: Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />   
     <link rel="preconnect" href="https://fonts.googleapis.com" />
