--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-12 col-md-auto">
                     <a href="#"><img id="logo" src="images/caturra-coffee-logo.webp" /></a>
-                    <form action="#" method="post">
+                    <form action="#" method="post" role="search">
                         <select name="menu" id="menu">
                             <option value="">Select a Page</option>
                             <option value="coffee">Coffee</option>
