Added aria-labels to social media icons

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
-                    <a href="https://www.instagram.com" class="icon" id="instagram-icon"></a>
-                    <a href="https://www.twitter.com" class="icon" id="twitter-icon"></a>
-                    <a href="https://www.facebook.com" class="icon" id="facebook-icon"></a>
+                    <a href="https://www.instagram.com" class="icon" id="instagram-icon" aria-label="Go to our instagram"></a>
+                    <a href="https://www.twitter.com" class="icon" id="twitter-icon" aria-label="Go to our twitter"></a>
+                    <a href="https://www.facebook.com" class="icon" id="facebook-icon" aria-label="Go to our facebook"></a>
                     <div class="clear"></div>
                     <p role="contentinfo" role>All content &copy; Caturra Coffee</p>
                 </div>
