Added aria-labels to masthead nav elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-xl">
             <div class="row justify-content-between">
                 <div class="col-auto">
-                    <nav class="left-nav">
+                    <nav class="left-nav" aria-label="Choose a product you would like to see">
                         <ul>
                             <li><a href="#">Coffee</a></li>
                             <li><a href="#">Tea</a></li>
@@ -38,7 +38,7 @@
                     </form>
                 </div>
                 <div class="col-auto">
-                    <nav class="right-nav">
+                    <nav class="right-nav" aria-label="Learn more about our company and our services">
                         <ul>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Locations</a></li>
