Added a meta description to the web page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Caturra Coffee :: Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />   
+    <meta name="description" content="Whether it's a delicious cup of coffee, a hot mug of tea, or a warm baked good, we'll make sure that you leave with a smile on your face. So come check us out at one of our locations!" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" />
