Added image replacement descriptions for the two hero images

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="bar"></div>
 
         <div id="hero-1">
-            <span class="image-descr"></span>
+            <span class="image-descr">The front counter of one of our shops.</span>
         </div>
 
         <section class="container-xl views">
@@ -86,7 +86,7 @@
         </section>
 
         <div id="hero-2">
-            <span class="image-descr"></span>
+            <span class="image-descr">A view of the street from inside the cafe.</span>
         </div>
 
         <section class="menu">
