Styled links when they receive focus

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-    <a href="#main" id="jump">Jump to main content</a>
+    <a href="#mainContent" id="jump">Jump to main content</a>
     <header>
         <div class="container-xl">
             <div class="row justify-content-between">
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="mainContent">
         <div class="bar"></div>
 
         <div id="hero-1">
