Condensed hero styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main id="mainContent">
         <div class="bar"></div>
 
-        <div id="hero-1">
+        <div id="hero-1" class="hero">
             <span class="image-descr">The front counter of one of our shops.</span>
         </div>
 
@@ -85,7 +85,7 @@
             </div>
         </section>
 
-        <div id="hero-2">
+        <div id="hero-2" class="hero">
             <span class="image-descr">A view of the street from inside the cafe.</span>
         </div>
 
