Added remaining nav options to select menu

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                             <option value="tea">Tea</option>
                             <option value="baked-goods">Baked Goods</option>
                             <option value="menus">Menus</option>
+                            <option value="About">About</option>
+                            <option value="Locations">Locations</option>
+                            <option value="Events">Events</option>
+                            <option value="Contact">Contact</option>
                         </select>
                     </form>
                 </div>
