--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </div>
                 <div class="col-12 col-md-auto">
                     <a href="#"><img id="logo" src="images/caturra-coffee-logo.webp" /></a>
-                    <form action="#" method="post" aria-label="Select the page you would like to go to">
-                        <select name="menu" id="menu" role="navigation">
+                    <form action="#" method="post">
+                        <select name="menu" id="menu" role="navigation" aria-label="Select the page you would like to go to">
                             <option value="">Select a Page</option>
                             <option value="coffee">Coffee</option>
                             <option value="tea">Tea</option>
