Removed duplicate role attribute in footer

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <a href="https://www.twitter.com" class="icon" id="twitter-icon" aria-label="Go to our twitter"></a>
                     <a href="https://www.facebook.com" class="icon" id="facebook-icon" aria-label="Go to our facebook"></a>
                     <div class="clear"></div>
-                    <p role="contentinfo" role>All content &copy; Caturra Coffee</p>
+                    <p role="contentinfo">All content &copy; Caturra Coffee</p>
                 </div>
             </div>
         </div>
