Added alt attribute to img elements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </nav>
                 </div>
                 <div class="col-12 col-md-auto">
-                    <a href="#"><img id="logo" src="images/caturra-coffee-logo.webp" /></a>
+                    <a href="#"><img id="logo" alt="Caturra Coffee logo" src="images/caturra-coffee-logo.webp" /></a>
                     <form action="#" method="post">
                         <select name="menu" id="menu" role="navigation" aria-label="Select the page you would like to go to">
                             <option value="">Select a Page</option>
@@ -142,7 +142,7 @@
             </div>
         </section>
 
-        <a href="#" id="chemex"><img src="images/chemex-top-rated-brewing-method.webp"/></a>
+        <a href="#" id="chemex"><img alt="Our chemex brewing method in action" src="images/chemex-top-rated-brewing-method.webp"/></a>
     </main>
 
     <footer>
