Surrounded select menu with a div labeled 'navigation' for role attribute. Added ='' to itemscope

--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
                 </div>
                 <div class="col-12 col-md-auto">
                     <a href="#"><img id="logo" alt="Caturra Coffee logo" src="images/caturra-coffee-logo.webp" /></a>
-                    <form action="#" method="post">
-                        <select name="menu" id="menu" role="navigation" aria-label="Select the page you would like to go to">
-                            <option value="">Select a Page</option>
-                            <option value="coffee">Coffee</option>
-                            <option value="tea">Tea</option>
-                            <option value="baked-goods">Baked Goods</option>
-                            <option value="menus">Menus</option>
-                            <option value="About">About</option>
-                            <option value="Locations">Locations</option>
-                            <option value="Events">Events</option>
-                            <option value="Contact">Contact</option>
-                        </select>
+                    <form action="#" method="post" >
+                        <div role="navigation">
+                            <select name="menu" id="menu" aria-label="Select the page you would like to go to">
+                                <option value="">Select a Page</option>
+                                <option value="coffee">Coffee</option>
+                                <option value="tea">Tea</option>
+                                <option value="baked-goods">Baked Goods</option>
+                                <option value="menus">Menus</option>
+                                <option value="About">About</option>
+                                <option value="Locations">Locations</option>
+                                <option value="Events">Events</option>
+                                <option value="Contact">Contact</option>
+                            </select>
+                        </div>
                     </form>
                 </div>
                 <div class="col-auto">
@@ -149,7 +151,7 @@
         <div class="container-xl">
             <div class="row justify-content-between">
                 <div class="col-sm-6 col-lg-3">
-                    <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                    <p itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
                         <span itemprop="streetAddress">438 Aster Avenue</span><br />
                         <span itemprop="addressLocality">Parktown</span>, 
                         <span itemprop="addressRegion"><abbr title="New Hampshire">NH</abbr></span> 
@@ -161,7 +163,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
-                    <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                    <p itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
                         <span itemprop="streetAddress">1426 Lakeside Road</span><br />
                         <span itemprop="addressLocality">Anderson</span>, 
                         <span itemprop="addressRegion"><abbr title="New Hampshire">NH</abbr></span> 
@@ -173,7 +175,7 @@
                     </p>
                 </div>
                 <div class="col-sm-6 col-lg-3">
-                    <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                    <p itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
                         <span itemprop="streetAddress">100 Main Street</span><br />
                         <span itemprop="addressLocality">Anderson</span>, 
                         <span itemprop="addressRegion"><abbr title="New Hampshire">NH</abbr></span> 
