Changed #mainContent to #main-content and removed id attribute from select element

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-    <a href="#mainContent" id="jump">Jump to main content</a>
+    <a href="#main-content" id="jump">Jump to main content</a>
     <header>
         <div class="container-xl">
             <div class="row justify-content-between">
@@ -30,7 +30,7 @@
                     <a href="#"><img id="logo" alt="Caturra Coffee logo" src="images/caturra-coffee-logo.webp" /></a>
                     <form action="#" method="post" >
                         <div role="navigation">
-                            <select name="menu" id="menu" aria-label="Select the page you would like to go to">
+                            <select name="menu" aria-label="Select the page you would like to go to">
                                 <option value="">Select a Page</option>
                                 <option value="coffee">Coffee</option>
                                 <option value="tea">Tea</option>
@@ -58,7 +58,7 @@
         </div>
     </header>
 
-    <main id="mainContent">
+    <main id="main-content">
         <div class="bar"></div>
 
         <div id="hero-1" class="hero">
