--- a/index.html
+++ b/index.html
@@ -104,38 +104,36 @@
                     </div>
                     <div class="col-md-5 menu-items">
                         <h2>Drinks</h2>
-                        <div class="row justify-content-between">
-                            <div class="col-auto drink-items">
+                        <div>
+                            <div class="drink-items">
                                 <ul>
-                                    <li>Cappucino California</li>
-                                    <li>Cafe Amiga</li>
-                                    <li>Machengo Tea</li>
-                                </ul>
-                            </div>
-                            <div class="col-auto drink-prices">
-                                <ul>
-                                    <li>$6.00</li>
-                                    <li>$4.50</li>
-                                    <li>$5.50</li>
+                                    <li class="row justify-content-between">
+                                        <span class="col-auto">Cappucino California</span> <span class="col-auto">$6.00</span>
+                                    </li>
+                                    <li class="row justify-content-between">
+                                        <span class="col-auto">Cafe Amiga</span> <span class="col-auto">$4.50</span>
+                                    </li>
+                                    <li class="row justify-content-between">
+                                        <span class="col-auto">Machengo Tea</span> <span class="col-auto">$5.50</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-5 menu-items">
                         <h2>Baked Goods</h2>
-                        <div class="row justify-content-between">
-                            <div class="col-auto baked-goods-items">
+                        <div>
+                            <div class="baked-goods-items">
                                 <ul>
-                                    <li>Macaron</li>
-                                    <li>Gluten-Free Bagel</li>
-                                    <li>Portlandia Donut</li>
-                                </ul>
-                            </div>
-                            <div class="col-auto baked-goods-prices">
-                                <ul>
-                                    <li>$3.00</li>
-                                    <li>$3.75</li>
-                                    <li>$7.00</li>
+                                    <li class="row justify-content-between">
+                                        <span class="col-auto">Macaron</span> <span class="col-auto">$3.00</span>
+                                    </li>
+                                    <li class="row justify-content-between">
+                                        <span class="col-auto">Gluten-Free Bagel</span> <span class="col-auto">$3.75</span>
+                                    </li>
+                                    <li class="row justify-content-between">
+                                        <span class="col-auto">Portlandia Donut</span> <span class="col-auto">$7.00</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
