--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container-xl">
             <div class="row justify-content-between">
                 <div class="col-auto">
-                    <nav class="left-nav" aria-label="Product navigation">
+                    <nav class="left-nav" aria-label="Products">
                         <ul>
                             <li><a href="#">Coffee</a></li>
                             <li><a href="#">Tea</a></li>
@@ -30,7 +30,7 @@
                     <a href="#"><img id="logo" alt="Caturra Coffee logo" src="images/caturra-coffee-logo.webp" /></a>
                     <form action="#" method="post" >
                         <div role="navigation">
-                            <select name="menu" aria-label="Mobile navigation">
+                            <select name="menu" aria-label="Mobile">
                                 <option value="">Select a Page</option>
                                 <option value="coffee">Coffee</option>
                                 <option value="tea">Tea</option>
@@ -45,7 +45,7 @@
                     </form>
                 </div>
                 <div class="col-auto">
-                    <nav class="right-nav" aria-label="Primary navigation">
+                    <nav class="right-nav" aria-label="Primary">
                         <ul>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Locations</a></li>
